--- a/Practica_hoteles/package.json
+++ b/Practica_hoteles/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "lite-server"
   },
-  "author": "",
+  "author": "Alexander hm",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.5.4"
